criando tela de aside-modal

--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -4,6 +4,12 @@
         <mat-icon (click)="exibir()" class="icon">menu</mat-icon>
         }
     </section>
+    <button (click)="ativoModal()">teste</button>
+    @if (ativo) {
+        <app-aside-modal (emitModal)="ativoModal()">
+            ijoisjvoisjoeiaj
+        </app-aside-modal>
+    }
     <section class="ng-form">
         <form action="" [formGroup]="grupo" (submit)="pegarvalor()">
             <div class="search">
