--- a/src/app/shared/component/aside-modal/aside-modal.component.scss
+++ b/src/app/shared/component/aside-modal/aside-modal.component.scss
@@ -9,12 +9,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px;
     .modal{
-        width: 520px;
-        height: 400px;
-        background-color: red;
+        width: 30%;
+        background-color:#FFFF;
+        border:1px solid #999;
         border-radius: 5px;
-        padding: 8px;
+        padding: 8px 10px;
+        box-sizing: border-box;
         .ng-btn{
             display: flex;
             width: 100%;
