--- a/src/app/features/pages/planos/planos.component.html
+++ b/src/app/features/pages/planos/planos.component.html
@@ -1,82 +1,1 @@
-<app-page-container>
-    <div class="main">
-        <app-header [carrinho]="true" class="s" categoria="categoria"></app-header>
-        <div class="ng-planos">
-            <section>
-                <app-banner [img]="img"></app-banner>
-                <h3 class="ng-title">Conheça Nossos Planos</h3>
-                <div class="ng-container-planos" >
-                    <div class="ng-plano">
-                        <h3>Zapdai Start</h3>
-                        <p>Para quem busca uma solução eficiente para gestão de pedidos e atendimento</p>
-                        <h1>14 Dias Grátis</h1>
-                        <ul>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                        </ul>
-                        <button (click)="ativaModal()" class="ng-btn-cadastrar">Cadastrar Agora</button>
-                    </div>
-                    <div class="ng-plano">
-                        <h3>Zapdai Pleno (Reconmendado)</h3>
-                        <p>Para quem busca uma solução eficiente para gestão de pedidos e atendimento</p>
-                        <h1>R$ 197,00</h1>
-                        <ul>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                        </ul>
-                        <button class="ng-btn-cadastrar" >Cadastrar Agora</button>
-                         
-                    </div>
-                    <div class="ng-plano">
-                        <h3>Zapdai Premium</h3>
-                        <p>Para quem busca uma solução eficiente para gestão de pedidos e atendimento</p>
-                        <h1>R$ 347,00</h1>
-                        <ul class="ng-list">
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                            <li>Cardápio Digital</li>
-                            <li>Gerenciamento de Pedidos</li>
-                            <li>Gerenciamento de entregadores</li>
-                        </ul>
-                        <button class="ng-btn-cadastrar">Cadastrar Agora</button>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </div>
-    @if (ativ) {
-        <app-aside-modal (emitModal)="ativaModal()">
-            <app-checkout></app-checkout>
-        </app-aside-modal>
-    }
-    <app-footer [footerActive]="true">
-       
-    </app-footer>
-</app-page-container>
+<router-outlet></router-outlet>
