--- a/src/app/features/pages/planos/homePlanos/homePlanos.component.scss
+++ b/src/app/features/pages/planos/homePlanos/homePlanos.component.scss
@@ -6,13 +6,12 @@
         display: flex;
         align-items: center;
         flex-direction: column;
+        gap: 50px 0;
 
         section {
             display: flex;
             flex-direction: column;
             text-align: center;
-            gap: 10px 0;
-            padding-bottom: 70px;
         }
 
         .ng-section02{
@@ -25,7 +24,7 @@
                 justify-content: center;
                 gap: 0 20px;
                 font-size: 14px;
-                padding: 20px;
+                padding: 0 20px;
 
                 .ng-box {
                     background: linear-gradient(to bottom, #41b44a, #000000);
