--- a/src/app/shared/component/checkout/checout.component.html
+++ b/src/app/shared/component/checkout/checout.component.html
@@ -1,15 +1,6 @@
-<div>
-    <form id="form-checkout">
-        <div id="form-checkout__cardNumber" class="container"></div>
-        <div id="form-checkout__expirationDate" class="container"></div>
-        <div id="form-checkout__securityCode" class="container"></div>
-        <input type="text" id="form-checkout__cardholderName" placeholder="Titular do cartão" />
-        <select id="form-checkout__issuer"></select>
-        <select id="form-checkout__installments"></select>
-        <select id="form-checkout__identificationType"></select>
-        <input type="text" id="form-checkout__identificationNumber" placeholder="CPF" />
-        <input type="email" id="form-checkout__cardholderEmail" placeholder="E-mail" />
-        <button type="submit" id="form-checkout__submit">Pagar</button>
-        <progress value="0" class="progress-bar">Carregando...</progress>
-      </form>
+<div class="ng-main">
+    <h3>Realize seu pagamento Pix</h3>
+    <img  class="ng-img" src="qrCodeTest.png"/>
+    <button class="ng-btn">Copie a chave PIX</button>
+    <img src="pagamentos/compra_segura_mercado_pago.png" alt="Pagamento seguro Mercado Pago" class="img-compra-segura">
 </div>
