--- a/src/app/shared/component/checkout/checout.component.scss
+++ b/src/app/shared/component/checkout/checout.component.scss
@@ -1,9 +1,32 @@
-#form-checkout{
+.ng-main {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    input{
+    justify-content: center;
+    align-items: center;
+    gap: 30px 0 ;
+    background-color: #FFF;
+    width: 100%;
+    border-radius: 20px;
+    padding: 25px;
+
+    .ng-img {
+        width: 50%;
+    }
+    .ng-btn{
+        background-color: rgb(136, 45, 172);
+        color: #ddd;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+    }
+
+    p {
+        margin: 30px;
+    }
+
+    .img-compra-segura {
         width: 100%;
-        height: 30px;
+        object-fit: cover;
+        margin-top: 30px;
     }
 }
