--- a/src/app/features/pages/planos/checkout01/checkoutPlanos.component.html
+++ b/src/app/features/pages/planos/checkout01/checkoutPlanos.component.html
@@ -222,6 +222,7 @@
                         <div class="tab-content" *ngIf="activeTab === 'pix'">
                             <div class="ng-contPix">
                                 <h3>O QR Code do seu pagamento pix será gerado ao clicar em FINALIZAR PAGAMENTO!</h3>
+                                <app-checkout [qr]="response"></app-checkout>
                             </div>
                         </div>
                       
