--- a/src/app/shared/component/checkout/checkout.component.scss
+++ b/src/app/shared/component/checkout/checkout.component.scss
@@ -10,7 +10,8 @@
     padding: 25px;
 
     .ng-img {
-        width: 50%;
+        width: 50px;
+        height: 50px;
     }
     .ng-btn{
         background-color: rgb(136, 45, 172);
