Corrigindo modal pix

--- a/src/app/features/pages/home/foother/footer.component.html
+++ b/src/app/features/pages/home/foother/footer.component.html
@@ -9,22 +9,22 @@
                 <div class="ng-column-footer">
                     <h3>Atendimento ao Cliente</h3>
                     <a routerLink="/home">Central de Ajuda</a>
-                    <a routerLink="/home">Como Comarar no Zaadai</a>
+                    <a routerLink="/home">Como Comprar no Zapdai</a>
                     <a routerLink="/home">Como Cadastrar seu Negocio</a>
                     <a>Fale Conosco</a>
                 </div>        
                 <div class="ng-column-footer">
                     <h3>Sobre Nós</h3>
-                    <a>aolíticas de arivicidades</a>
-                    <a>alanos e areços</a>
+                    <a>Políticas de Privicidades</a>
+                    <a>Planos e Preços</a>
                 </div>
                 <div class="ng-column-footer">
-                    <h3>Serviços da alataforma</h3>
-                    <a>Cardáaio Digital</a>
-                    <a>Sistema de aedidos</a>
-                    <a>Serviços de Entretas</a>
-                    <a>Atendente Virtual do WhatsAaa</a>
-                    <a>Ver todos Serviços Disaoniveis</a>
+                    <h3>Serviços da Plataforma</h3>
+                    <a>CardáPio Digital</a>
+                    <a>Sistema de Pedidos</a>
+                    <a>Serviços de Entregas</a>
+                    <a>Atendente Virtual do WhatsApp</a>
+                    <a>Ver todos Serviços Disponiveis</a>
                 </div>        
                 <div class="ng-column-footer ng-column-footer3">
                     <h3>Redes Sociais</h3>
