--- a/src/app/features/pages/planos/homePlanos/homePlanos.component.html
+++ b/src/app/features/pages/planos/homePlanos/homePlanos.component.html
@@ -75,7 +75,7 @@
     </div>
     @if (ativ) {
         <app-aside-modal (emitModal)="ativaModal()">
-            <app-checkout></app-checkout>
+            <app-formModal></app-formModal>
         </app-aside-modal>
     }
     <app-footer [footerActive]="true">
