--- a/src/app/shared/component/checkout/checkoutPix.component.scss
+++ b/src/app/shared/component/checkout/checkoutPix.component.scss
@@ -8,26 +8,60 @@
     width: 100%;
     border-radius: 20px;
     padding: 25px;
+    h2{
+        font-size: 14px;
+    }
+    .ng-key{
+        padding: 0 50px;
+        h2{
+            font-size: 16px;
+            word-wrap: break-word;
+        }
+    }
 
     .ng-img {
         width: 50px;
         height: 50px;
     }
     .ng-btn{
-        background-color: rgb(136, 45, 172);
         color: #ddd;
         border: none;
         padding: 10px 20px;
         border-radius: 5px;
+    }
+    .ng-btn:active{
+        transform: scale(0.97);
+
+    }
+    .ng-btn:disabled{
+        color: #423d3d;
+    }
+    .ng-btn{
+        transform: scale(0.97);
+
     }
 
     p {
         margin: 30px;
     }
 
+    // .img-compra-segura {
+    //     background-image: url("../../../../../public/pagamentos/compra_segura_mercado_pago.png");
+    //     background-size: contain;
+    //     background-repeat: no-repeat;
+    //     width: 100%;
+    //     height: 100%;
+    //     margin-top: 30px;
+    //     padding:0 20px;
+
+    // }
     .img-compra-segura {
         width: 100%;
-        object-fit: cover;
-        margin-top: 30px;
+        height:40px;
+        background-image: url("/pagamentos/compra_segura_mercado_pago.png");      
+         background-repeat: no-repeat;
+        background-size:contain;
+        background-position: center;
     }
+
 }
